--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "politico",
   "version": "1.0.0",
   "description": "electronic voting platform for national elections",
-  "main": "index.js",
+  "main": "Versioning.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --watch server.js --exec babel-node -- server.js",
+    "test": "mocha  --require @babel/polyfill --require @babel/register \" api/v1/tests/**/*.spec.js\" --reporter progress --exit ",
+    "lint": " esw server.js versioning.js api/v1/* --color",
+    "lint-watch": "npm run lint -- --watch"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,26 @@
   "bugs": {
     "url": "https://github.com/Anuoluwa/e-voting-Politico/issues"
   },
-  "homepage": "https://github.com/Anuoluwa/e-voting-Politico#readme"
+  "homepage": "https://github.com/Anuoluwa/e-voting-Politico#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "express-api-versioning": "^2.0.0",
+    "mocha": "^5.2.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/register": "^7.0.0",
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.15.0",
+    "nodemon": "^1.18.9",
+    "supertest": "^3.4.2"
+  }
 }
