--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "Versioning.js",
   "scripts": {
     "start": "nodemon --watch server.js --exec babel-node -- server.js",
-    "test": "mocha  --require @babel/polyfill --require @babel/register \" api/v1/tests/**/*.spec.js\" --reporter progress --exit ",
+    "test": "nyc --reporter=html --reporter=text mocha  --require @babel/polyfill --require @babel/register \" api/v1/tests/**/*.spec.js\" --reporter progress --exit ",
     "lint": " esw server.js versioning.js api/v1/* --color",
-    "lint-watch": "npm run lint -- --watch"
+    "lint-watch": "npm run lint -- --watch",
+    "coveralls": "npm run coverage -- --report lcovonly && cat ./coverage/lcov.info | coveralls",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -34,10 +36,13 @@
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "@babel/register": "^7.0.0",
+    "coveralls": "^3.0.2",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.15.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.9",
+    "nyc": "^13.1.0",
     "supertest": "^3.4.2"
   }
 }
