--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "electronic voting platform for national elections",
   "main": "Versioning.js",
   "scripts": {
-    "start": "nodemon --watch server.js --exec babel-node -- server.js",
+    "start": "babel-node server.js",
     "test": "nyc --reporter=html --reporter=text mocha  --require @babel/polyfill --require @babel/register \" api/v1/tests/**/*.spec.js\" --reporter progress --exit ",
     "lint": " esw server.js versioning.js api/v1/* --color",
     "lint-watch": "npm run lint -- --watch",
