--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "@babel/register": "^7.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-api-versioning": "^2.0.0",
+    "jsonwebtoken": "^8.4.0",
     "mocha": "^5.2.0",
     "morgan": "^1.9.1",
     "pg": "^7.8.0"
