Feat(Endpoint to create party): Implement POST api/v2/parties to add new party - No validations yet [Delivers #163639501]

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "drop-db-prod": "cross-env NODE_ENV=production babel-node ./api/v2/migrations/dropTables.js",
     "insert-db-prod": "cross-env NODE_ENV=production babel-node ./api/v2/migrations/seeders.js",
     "tests": "npm run migrations && npm run seeder:testadmin && npm run test",
+    "create-db-admin-prod": "cross-env NODE_ENV=production babel-node ./api/v2/migrations/createAdmin.js",
     "lint": " esw server.js versioning.js api/v1/* --color",
     "lint-watch": "npm run lint -- --watch",
     "coveralls": "npm run coverage -- --report lcovonly && cat ./coverage/lcov.info | coveralls",
