--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "electronic voting platform for national elections",
   "main": "Versioning.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production babel-node server.js",
+    "start": "cross-env NODE_ENV=development babel-node server.js",
     "test": "npm run migrate-test cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha  --require @babel/polyfill --require @babel/register \" api/v1/tests/**/*.spec.js\" --reporter progress --exit ",
     "migrate-test": "npm run drop-db-test && npm run create-db-test && npm run insert-db-test",
     "create-db-test": "cross-env NODE_ENV=test babel-node ./api/v2/migrations/createTables.js",
     "drop-db-test": "cross-env NODE_ENV=test babel-node ./api/v2/migrations/dropTables.js",
     "insert-db-test": "cross-env NODE_ENV=test babel-node ./api/v2/migrations/seeders.js",
-    "create-db-prod": "cross-env NODE_ENV=production babel-node ./api/v2/migrations/createTables.js",
-    "drop-db-prod": "cross-env NODE_ENV=production babel-node ./api/v2/migrations/dropTables.js",
-    "insert-db-prod": "cross-env NODE_ENV=production babel-node ./api/v2/migrations/seeders.js",
+    "create-db-dev": "cross-env NODE_ENV=development babel-node ./api/v2/migrations/createTables.js",
+    "drop-db-dev": "cross-env NODE_ENV=development babel-node ./api/v2/migrations/dropTables.js",
+    "insert-db-dev": "cross-env NODE_ENV=development babel-node ./api/v2/migrations/seeders.js",
     "tests": "npm run migrations && npm run seeder:testadmin && npm run test",
-    "create-db-admin-prod": "cross-env NODE_ENV=production babel-node ./api/v2/migrations/createAdmin.js",
+    "create-db-admin-dev": "cross-env NODE_ENV=development babel-node ./api/v2/migrations/createAdmin.js",
     "lint": " esw server.js versioning.js api/v1/* --color",
     "lint-watch": "npm run lint -- --watch",
     "coveralls": "npm run coverage -- --report lcovonly && cat ./coverage/lcov.info | coveralls",
