--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "electronic voting platform for national elections",
   "main": "Versioning.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development babel-node server.js",
+    "start": "babel-node server.js",
     "test": "npm run migrate-test cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha  --require @babel/polyfill --require @babel/register \" api/v1/tests/**/*.spec.js\" --reporter progress --exit ",
     "tesss": "nyc --reporter=html --reporter=text mocha  --require @babel/polyfill --require @babel/register \" api/v1/tests/**/*.spec.js\" --reporter progress --exit ",
     "migrate-test": "npm run drop-db-test && npm run create-db-test && npm run insert-db-test",
